--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/react-app2/",
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
